2012-05-12  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/memmove.c (MEMMOVE): Don't return a value if
	used as bcopy.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/memmove.c: New file based on string/memmove.c where
	__builtin_memcopy is called when src and dest ranges are known to not
	overlap.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power6/wordcopy.c
	(_wordcopy_fwd_dest_aligned): Replace switch with a parameterized
	fwd_align_merge macro call.
	(_wordcopy_bwd_dest_aligned): Replace switch with a parameterized
	bwd_align_merge macro call.
	* sysdeps/powerpc/powerpc32/power6/wordcopy.c: Likewise.

2012-04-18  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power6/wordcopy.c: Add fwd_align_merge and
	bwd_align_merge macros.
	(_wordcopy_fwd_dest_aligned): Use fwd_align_merge macro calls.
	(_wordcopy_bwd_dest_aligned): Use bwd_align_merge macro calls.
	* sysdeps/powerpc/powerpc32/power6/wordcopy.c: Likewise.

2011-11-16  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/Makefile: Added locale-defines.sym generation.
	* sysdeps/powerpc/locale-defines.sym: Locale definitions for strcasecmp
	optimized code.
	* sysdeps/powerpc/powerpc32/power7/Makefile: New file: added unroll-loop
	option for strncasecmp/strncasecmp_l compilation.
	* sysdeps/powerpc/powerpc32/power7/strcasecmp.S: New file: strcasecmp
	optimization for PPC32.
	* sysdeps/powerpc/powerpc32/power7/strcasecmp_l.S: New file: strcasecmp_l
	optimization for PPC32.
	* sysdeps/powerpc/powerpc64/power7/Makefile: Added unroll-loop option for
	strncasecmp/strncasecmp_l compilation.
	* sysdeps/powerpc/powerpc64/power7/strcasecmp.S: New file: strcasecmp
	optimization for PPC64.
	* sysdeps/powerpc/powerpc64/power7/strcasecmp_l.S: New file: strcasecmp_l
	optimization for PPC64.

2011-11-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* math/libm-test.inc: Added more nerabyint tests.